--- a/index.html
+++ b/index.html
@@ -5,31 +5,31 @@
     <title>itguys.ro</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
-    <link rel="apple-touch-icon" sizes="57x57" href="/assets/images/ico/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/assets/images/ico/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/assets/images/ico/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/assets/images/ico/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/assets/images/ico/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/assets/images/ico/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/assets/images/ico/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/assets/images/ico/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/ico/apple-icon-180x180.png">
+    <link rel="apple-touch-icon" sizes="57x57" href="assets/images/ico/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="assets/images/ico/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="assets/images/ico/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="assets/images/ico/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="assets/images/ico/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="assets/images/ico/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="assets/images/ico/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="assets/images/ico/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/ico/apple-icon-180x180.png">
     <link rel="icon" type="image/png" sizes="192x192"
-          href="/assets/images/ico/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/ico/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/assets/images/ico/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/ico/favicon-16x16.png">
-    <link rel="manifest" href="/assets/images/ico/manifest.json">
+          href="assets/images/ico/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/ico/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="assets/images/ico/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/ico/favicon-16x16.png">
+    <link rel="manifest" href="assets/images/ico/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/assets/images/ico/ms-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="assets/images/ico/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 <div class="fullwidth clearfix">
     <div id="topcontainer" class="bodycontainer clearfix"
          data-uk-scrollspy="{cls:'uk-animation-fade', delay: 300, repeat: true}">
-        <p><img src="/assets/images/ico/favicon-96x96.png" alt="logo"></p>
+        <p><img src="assets/images/ico/favicon-96x96.png" alt="logo"></p>
         <h1><span>{{ siteName }}</span><br/>is coming soon</h1>
         <p>It's almost ready ... honest</p>
     </div>
@@ -60,11 +60,11 @@
         </div>
     </div>
 </div>
-<script src="/assets/js/jquery.js"></script>
-<script src="/assets/js/countdown.js"></script>
-<script src="/assets/js/owlcarousel.js"></script>
-<script src="/assets/js/uikit.scrollspy.js"></script>
-<script src="/assets/js/scripts.js"></script>
+<script src="assets/js/jquery.js"></script>
+<script src="assets/js/countdown.js"></script>
+<script src="assets/js/owlcarousel.js"></script>
+<script src="assets/js/uikit.scrollspy.js"></script>
+<script src="assets/js/scripts.js"></script>
 <!--[if lt IE 9]>
 <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 
