--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div id="topcontainer" class="bodycontainer clearfix"
          data-uk-scrollspy="{cls:'uk-animation-fade', delay: 300, repeat: true}">
         <p><img src="assets/images/ico/favicon-96x96.png" alt="logo"></p>
-        <h1><span>{{ siteName }}</span><br/>is coming soon</h1>
+        <h1><span>itguys.ro</span><br/>is coming soon</h1>
         <p>It's almost ready ... honest</p>
     </div>
 </div>
