cleanup + security.txt

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>itguys.ro</title>
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="description" content="itguys">
+    <meta name="keywords" content="itguys,development,software,outsourcing">
     <link rel="apple-touch-icon" sizes="57x57" href="assets/images/ico/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="assets/images/ico/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="assets/images/ico/apple-icon-72x72.png">
@@ -62,14 +62,10 @@
 </div>
 <script src="assets/js/jquery.js"></script>
 <script src="assets/js/countdown.js"></script>
-<script src="assets/js/owlcarousel.js"></script>
-<script src="assets/js/uikit.scrollspy.js"></script>
 <script src="assets/js/scripts.js"></script>
-<!--[if lt IE 9]>
-<script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 
 <!-- Cloudflare Web Analytics -->
-<script defer src='https://static.cloudflareinsights.com/beacon.min.js'
+<script defer src="https://static.cloudflareinsights.com/beacon.min.js"
         data-cf-beacon='{"token": "ce1c657f78fb46bd8109959682a2468f"}'></script>
 <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
 <!-- End Cloudflare Web Analytics -->
