--- a/index.html
+++ b/index.html
@@ -62,8 +62,10 @@
 </div>
 <div class="arrow-separator arrow-theme"></div>
 <div class="fullwidth clearfix">
-    <p><a href="tel:+40726205856">+40 726 20 58 56</a></p>
-    <p><a href="mailto:contact@itguys.ro">contact@itguys.ti</a></p>
+    <div class="bodycontainer clearfix">
+        <p><a href="tel:+40726205856">+40 726 20 58 56</a></p>
+        <p><a href="mailto:contact@itguys.ro">contact@itguys.ti</a></p>
+    </div>
 </div>
 <script src="assets/js/jquery.js"></script>
 <script src="assets/js/countdown.js"></script>
