--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <div class="fullwidth clearfix">
     <div class="bodycontainer clearfix">
         <p><a href="tel:+40726205856">+40 726 20 58 56</a></p>
-        <p><a href="mailto:contact@itguys.ro">contact@itguys.ti</a></p>
+        <p><a href="mailto:contact@itguys.ro">contact@itguys.ro</a></p>
     </div>
 </div>
 <script src="assets/js/jquery.js"></script>
